--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -34,6 +34,9 @@ button:hover {
   padding: 10px 18px;
   background-color: #f44336;
 }
+#cancelbtn {
+  width: 5%;
+}
 
 /* Center the image and position the close button */
 .imgcontainer {
