--- a/src/styles/signUp.css
+++ b/src/styles/signUp.css
@@ -4,10 +4,11 @@ body {
 * {
   box-sizing: border-box;
 }
-
+.main-content {
+  padding: 40px 15px 20px 80px;
+}
 /* Full-width input fields */
-input[type='text'],
-input[type='password'] {
+.input {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -17,8 +18,7 @@ input[type='password'] {
 }
 
 /* Add a background color when the inputs get focus */
-input[type='text']:focus,
-input[type='password']:focus {
+.input:focus {
   background-color: #ddd;
   outline: none;
 }
@@ -34,14 +34,14 @@ input[type='password']:focus {
   width: 100%;
   opacity: 0.9;
 }
-.signupbtn {
+#signupbtn {
   background-color: #04aa6d;
   color: white;
-  padding: 14px 20px;
+  padding: 24px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  width: 100%;
+  width: 50%;
   opacity: 0.9;
 }
 
@@ -51,6 +51,10 @@ input[type='password']:focus {
 
 /* Extra styles for the cancel button */
 .cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+.signupbtn {
   padding: 14px 20px;
   background-color: #f44336;
 }
@@ -109,6 +113,10 @@ hr {
 .close:focus {
   color: #f44336;
   cursor: pointer;
+}
+.row {
+  display: flex;
+  justify-content: space-around;
 }
 
 /* Clear floats */
